"modifying indeex path in "nosotros.html""

--- a/htmls/nosotros.html
+++ b/htmls/nosotros.html
@@ -31,7 +31,7 @@
     </header>
     <nav>
       <ul class="nav-list holder">
-        <li class="nav-item home"><a href="index.html">Home</a></li>
+        <li class="nav-item home"><a href="../index.html">Home</a></li>
         <li class="nav-item nosotros activo">
           <a href="../htmls/nosotros.html">Nosotros</a>
         </li>
