"cambio de tematica"

--- a/htmls/nosotros.html
+++ b/htmls/nosotros.html
@@ -17,16 +17,16 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link class="main-icon" rel="icon" href="../icons/subway.png" />
+    <link class="main-icon" rel="icon" href="../icons/plane.png" />
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/transportes.css" />
-    <title>TransporteX</title>
+    <title>Sky Airlines</title>
   </head>
   <body>
     <header>
       <div class="c-header holder">
-        <img src="../img/logo.png" width="100" alt="imagen-cabezara" />
-        <h1>TransporteX</h1>
+        <img src="../img/airplane-png.png" width="100" alt="imagen-cabezara" />
+        <h1>Sky Airlines</h1>
       </div>
     </header>
     <nav>
