--- a/htmls/servicios.html
+++ b/htmls/servicios.html
@@ -17,16 +17,16 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link class="main-icon" rel="icon" href="../icons/subway.png" />
+    <link class="main-icon" rel="icon" href="../icons/plane.png" />
     <link rel="stylesheet" href="../css/normalize.css" />
     <link rel="stylesheet" href="../css/transportes.css" />
-    <title>TransporteX</title>
+    <title>Sky Airlines</title>
   </head>
   <body>
     <header>
       <div class="c-header holder">
-        <img src="../img/logo.png" width="100" alt="imagen-cabezara" />
-        <h1>TransporteX</h1>
+        <img src="../img/airplane-png.png" width="100" alt="imagen-cabezara" />
+        <h1>Sky Airlines</h1>
       </div>
     </header>
     <nav>
@@ -53,10 +53,10 @@
       <h2 class="h2-servicios">Servicios</h2>
       <div class="caja">
         <div class="img-caja">
-          <img src=../img/servicios/ferroviario.jpg alt="tren">
+          <img src=../img/servicios/vip.jpg width=300 alt="vip">
         </div>
         <div class="info">
-          <h4 class="h4-caja">Transporte Ferroviario</h4>
+          <h4 class="h4-caja">Calse VIP</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
             delectus harum repellendus nobis, officiis commodi necessitatibus
@@ -67,10 +67,10 @@
       </div>
       <div class="caja">
         <div class="img-caja">
-          <img src=../img/servicios/aereo.jpg alt="avion">
+          <img src=../img/servicios/Business.jpg width=300 alt="Business">
         </div>
         <div class="info">
-          <h4 class="h4-caja">Transporte Aereo</h4>
+          <h4 class="h4-caja">Clase Business</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
             delectus harum repellendus nobis, officiis commodi necessitatibus
@@ -81,10 +81,10 @@
       </div>
       <div class="caja">
         <div class="img-caja">
-          <img src=../img/servicios/maritimo.jpg alt="barco">
+          <img src=../img/servicios/economy.jpg width=300 alt="Economy">
         </div>
         <div class="info">
-          <h4 class="h4-caja">Transporte Maritimo</h4>
+          <h4 class="h4-caja">Clase Economy</h4>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
             delectus harum repellendus nobis, officiis commodi necessitatibus
