"arreglar nombre de imagen "E"conomy "

--- a/htmls/servicios.html
+++ b/htmls/servicios.html
@@ -81,7 +81,7 @@
       </div>
       <div class="caja">
         <div class="img-caja">
-          <img src=../img/servicios/economy.jpg width=300 alt="Economy">
+          <img src=../img/servicios/Economy.jpg width=300 alt="Economy">
         </div>
         <div class="info">
           <h4 class="h4-caja">Clase Economy</h4>
